--- a/index.html
+++ b/index.html
@@ -3,35 +3,55 @@
 <head>
   <title>Who Wants To Be a Millionaire </title>
   <link rel="stylesheet" type="text/css" href="./css/style.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="./js/questions.js"></script>
   <script src="./js/app.js"></script>
   
 </head>
 <body>
 
+  <audio autoplay>
+   <source src="sounds/intro.mp3" type="audio/mpeg">
+   </audio>
 
-  <div>
-    <h1>Who Wants to be a Millionaire</h1>
-    <button>START</button> 
-    <p id="question">Question</p>
-    <div> 
-      <button class="answerButton" id="0">Answer 1</button>
-      <button class="answerButton" id="1">Answer 2</button>
-      <button class="answerButton" id="2">Answer 3</button>
-      <button class="answerButton" id="3">Answer 4</button>
+   <audio autoplay>
+    <source src="sounds/kompetenzjoker.mp3" type="audio/mpeg">
+    </audio>
+
+
+
+    <div class="container">
+      <div class="first-section">
+       <div class="home-buttons">
+        <button class="buttons-theme" data-theme='general'>General</button>
+        <button class="buttons-theme" data-theme='movies'>Movies</button>
+        <button class="buttons-theme" data-theme='tech'>Technology</button>
+      </div>
     </div>
+    <div class="second-section">
+      <p id="question">Question</p>
+      <div class= "options"> 
+        <div>
+          <button class="answerButton first-row" id="0">Answer 1</button>
+          <button class="answerButton first-row" id="1">Answer 2</button>
+        </div>
+        <div>
+          <button class="answerButton second-row" id="2">Answer 3</button>
+          <button class="answerButton second-row" id="3">Answer 4</button>
+        </div>
+      </div>
 
-    <div>
-      <p>Player 1:</p>
-      <h3 id="playerOneScore">0</h3>
-      <p>Player 2:</p>
-      <h3 id="playerTwoScore">0</h3>
-
+      <div class="last-section">
+        <p>Player 1</p>
+        <h3 id="playerOneScore">0</h3>
+        <p>Player 2</p>
+        <h3 id="playerTwoScore">0</h3>
+        <a href="">Restart</a>
+      </div>
       <h4 class ="players turn">Player Ones Turn</h4>
-     
+
+<!--       <button class="back" style="display:none;">Back</button> -->
     </div>
   </div>
-
-
-
 </body>
 </html>
